kubernetes-networks/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: web-server
          image: nginx:stable
          ports:
            - name: port-http
              containerPort: 8000
          volumeMounts:
            - name: workdir
              mountPath: "/homework"
            - name: nginx-config
              mountPath: "/etc/nginx/conf.d"
          readinessProbe:
            httpGet:
              port: port-http
              path: "/index.html"
            initialDelaySeconds: 5
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command:
                  - rm
                  - "/homework/index.html"
      volumes:
        - name: workdir
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: cm-web-server-config
