kubernetes-networks/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-web-server
  namespace: homework
spec:
  selector:
    app: web-server
  ports:
    - name: svc-port-https
      protocol: TCP
      port: 443
      targetPort: port-http
