kubernetes-networks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web-server
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: “true”
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "yc-clusterissuer"
spec:
  ingressClassName: nginx #
  tls:
    - hosts:
        - hw.kubeclass.ru
      secretName: hw-tls-secret
  rules:
    - host: hw.kubeclass.ru
      http:
        paths:
          - pathType: Prefix
            path: /homepage
            backend:
              service:
                name: svc-web-server
                port:
                  name: svc-port-https
          - pathType: Prefix
            path: /()(.*)
            backend:
              service:
                name: svc-web-server
                port:
                  name: svc-port-https
